api changes for explicit route setting, lighter-weight connection pool discriminators (URI)